# docxside-template

./: .gitignore  .plan.md  Cargo.toml  LICENSE  README.md  build.rs  out.txt  path.txt  test.txt  todos.md
docxide-template/: Cargo.toml
docxide-template-derive/: Cargo.toml  README.md
docxide-template-derive/src/: codegen.rs  docx_extract.rs  lib.rs  placeholders.rs  templates.rs
docxide-template/src/: lib.rs
docxside-template/: Cargo.toml
docxside-template-derive/: Cargo.toml  README.md
docxside-template-derive/src/: lib.rs  templates.rs
docxside-template/src/: lib.rs
examples/embedded_templates/: Cargo.toml  README.md
examples/embedded_templates/src/: main.rs
examples/save_to_file/: Cargo.toml  README.md
examples/save_to_file/src/: main.rs
examples/to_bytes/: Cargo.toml  README.md
examples/to_bytes/src/: main.rs
output/: hello.docx  split_runs_output.docx
scripts/: gen_combined_areas.py  gen_empty_document.py  gen_formatted_runs.py  gen_header_footer_placeholders.py  gen_split_runs.py  gen_table_placeholders.py  gen_tricky_filenames.py  gen_unicode_placeholders.py
src/: foo.rs  lib.rs  main.rs  proc.rs  templates.rs
templates/: 0627-ReturAvSak.docx  experiment.docx  experiment2.docx  experiment3.docx  simple_orig.docx
templates/retur/: [Content_Types].xml
templates/retur/docProps/: app.xml  core.xml  custom.xml
templates/retur/word/: document.xml  endnotes.xml  fontTable.xml  footer1.xml  footer2.xml  footnotes.xml  header1.xml  settings.xml  styles.xml  webSettings.xml
templates/retur/word/_rels/: document.xml.rels  header1.xml.rels
templates/retur/word/theme/: theme1.xml
templates/simple/: [Content_Types].xml
templates/simple/_rels/: .rels
templates/simple/docProps/: app.xml  core.xml  custom.xml
templates/simple/word/: document.xml  fontTable.xml  settings.xml  styles.xml
templates/simple/word/theme/: theme1.xml
test/: GoodbyeWorld  HelloWorld.docx  type_1.txt  type_100.txt  type_1000.txt  type_101.txt  type_102.txt  type_103.txt  type_104.txt  type_105.txt  type_106.txt  type_107.txt  type_108.txt  type_109.txt  type_11.txt  type_110.txt  type_111.txt  type_112.txt  type_113.txt  type_114.txt  type_115.txt  type_116.txt  type_117.txt  type_118.txt  type_119.txt  type_12.txt  type_120.txt  type_121.txt  type_122.txt  type_123.txt  type_124.txt  type_125.txt  type_126.txt  type_127.txt  type_128.txt  type_129.txt  type_13  type_13.txt  type_130.txt  type_131.txt  (+962 more)
test-crate/: Cargo.toml
test-crate/src/: main.rs
test-crate/templates/: 123_starts_with_digit.docx  ALLCAPS.docx  HeadFootTest.docx  HelloWorld.docx  _leading_underscore.docx  a.docx  already-PascalCase.docx  blank_paragraphs.docx  combined_areas.docx  empty_document.docx  formatted_runs.docx  invalid_placeholders.docx  my-template.docx  split_runs_template.docx  table_placeholders.docx  unicode_placeholders.docx
