[package]
name = "docxside-templates"
version = "0.1.0"
edition = "2021"
#build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
file-format = { version = "0.25.0", features = ["reader-zip"] }
heck = "0.5.0"
docx-rs = "0.4.17"
rayon = "1.10.0"
quote = "1.0"
syn = { version = "2.0.96", features = ["full"] }
regex = "1.11.1"
zip = "2.2.2"

[lib]
proc-macro = true
