[package]
name = "docxide-template"
version = "0.1.2"
edition = "2021"
description = "Type-safe .docx template engine — generate Rust structs from Word templates with {placeholder} patterns"
license = "MIT"
repository = "https://github.com/sverrejb/docxide-template"
readme = "../README.md"
keywords = ["docx", "template", "word", "proc-macro", "codegen"]
categories = ["template-engine", "text-processing"]
exclude = [
    "test-crate/",
    "scripts/",
    "output/",
    "lancedb/",
    "models/",
    ".claude/",
    "CLAUDE.md",
    "ROADMAP.md",
]

[features]
embed = ["docxide-template-derive/embed"]

[dependencies]
docxide-template-derive = { path = "../docxide-template-derive", version = "0.1.2" }
zip = "2.2.2"
