[package]
name = "docxside-template-derive"
version = "0.1.0"
edition = "2021"
description = "Proc-macro internals for docxside-template — do not depend on this directly"
license = "MIT"
repository = "https://github.com/sverrejb/docxside-template"

[dependencies]
file-format = { version = "0.25.0", features = ["reader-zip"] }
heck = "0.5.0"
docx-rs = "0.4.17"
quote = "1.0"
syn = { version = "2.0.96", features = ["full"] }
regex = "1.11.1"
proc-macro2 = "1.0.93"

[lib]
proc-macro = true
